MSVC: Consider build environment when calculating header paths

Fixes: QTCREATORBUG-25816
Change-Id: Id6274d2bec4ed3db07729f1d88a5a9ad82c8d98d
Reviewed-by: Christian Stenger <christian.stenger@qt.io>